// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> size 300 renders as expected 1`] = `
Extracted Styles:
box-sizing: border-box;
color: #474d66;
font-family: "Inter", sans-serif;
font-size: 11.2px;
font-weight: 400;
letter-spacing: 0;
line-height: 16px;


<span
  className="ub-fnt-sze_11-2px ub-f-wght_400 ub-ln-ht_16px ub-ltr-spc_0 ub-fnt-fam_1yirpkw ub-color_474d66 ub-box-szg_border-box"
>
  Text 300
</span>
`;

exports[`<Text /> size 400 renders as expected 1`] = `
Extracted Styles:
box-sizing: border-box;
color: #474d66;
font-family: "Inter", sans-serif;
font-size: 14px;
font-weight: 400;
letter-spacing: -0.05px;
line-height: 23px;


<span
  className="ub-fnt-sze_14px ub-f-wght_400 ub-ln-ht_23px ub-ltr-spc_-0-05px ub-fnt-fam_1yirpkw ub-color_474d66 ub-box-szg_border-box"
>
  Text 400
</span>
`;

exports[`<Text /> size 500 renders as expected 1`] = `
Extracted Styles:
box-sizing: border-box;
color: #474d66;
font-family: "Inter", sans-serif;
font-size: 17.5px;
font-weight: 400;
letter-spacing: -0.05px;
line-height: 23px;


<span
  className="ub-fnt-sze_17-5px ub-f-wght_400 ub-ln-ht_23px ub-ltr-spc_-0-05px ub-fnt-fam_1yirpkw ub-color_474d66 ub-box-szg_border-box"
>
  Text 500
</span>
`;

exports[`<Text /> size 600 renders as expected 1`] = `
Extracted Styles:
box-sizing: border-box;
color: #474d66;
font-family: "Inter", sans-serif;
font-size: 21.88px;
font-weight: 400;
letter-spacing: -0.07px;
line-height: 28px;


<span
  className="ub-fnt-sze_21-88px ub-f-wght_400 ub-ln-ht_28px ub-ltr-spc_-0-07px ub-fnt-fam_1yirpkw ub-color_474d66 ub-box-szg_border-box"
>
  Text 600
</span>
`;

exports[`Colors <Text /> accepts arbitrary theme values for color 1`] = `
Extracted Styles:
box-sizing: border-box;
color: #696f8c;
font-family: "Inter", sans-serif;
font-size: 14px;
font-weight: 400;
letter-spacing: -0.05px;
line-height: 23px;


Array [
  <span
    className="ub-fnt-sze_14px ub-f-wght_400 ub-ln-ht_23px ub-ltr-spc_-0-05px ub-fnt-fam_1yirpkw ub-color_696f8c ub-box-szg_border-box"
  >
    Testing
  </span>,
  " ",
]
`;

exports[`Colors <Text /> does not render any color when a non-theme color is passed in  1`] = `
Extracted Styles:
box-sizing: border-box;
color: SOMETHING DOESNT EXISt;
font-family: "Inter", sans-serif;
font-size: 14px;
font-weight: 400;
letter-spacing: -0.05px;
line-height: 23px;


Array [
  <span
    className="ub-fnt-sze_14px ub-f-wght_400 ub-ln-ht_23px ub-ltr-spc_-0-05px ub-fnt-fam_1yirpkw ub-color_SOMETHING-DOESNT-EXISt ub-box-szg_border-box"
  >
    Testing
  </span>,
  " ",
]
`;
